fix overlapping background of x-axis header in frames panel

--- a/less/_panel-timeline.less
+++ b/less/_panel-timeline.less
@@ -198,3 +198,7 @@
 #memory-counters-graph {
 	border-right: 1px solid lighten(@global-background, 3%) !important;
 }
+
+.timeline-frame-container {
+	background: none !important;
+}
